# SwarmStudio

./: .gitignore  PlanInMemory.md  search.py
.github/: copilot-instructions.md
.github/prompts/: plan-localOfflineMultiAgentAi.prompt.md  plan-localOfflineMultiAgentAi1.prompt.md
swarm-studio/: hf.json  memo.md  out.json  package-lock.json  package.json  vite.config.ts
swarm-studio/src/: App.css  App.tsx  treeSitterWorker.ts
swarm-studio/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
swarm-studio/src-tauri/src/: lib.rs  main.rs
